added papers -> Howard18, rumelhart86, bengio03

--- a/makemore/mlp.ipynb
+++ b/makemore/mlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "id": "bb6151f8-7b27-47bd-81df-056c78d5ea46",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'2.1.1+cu121'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "id": "86c5ded7-d1bb-4d76-9f3f-050f4676b2c5",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "names:  ['braylinn', 'harlei', 'viana', 'greylin', 'teniola']\n",
+      "names:  ['eliette', 'aryan', 'raeley', 'torrey', 'kaylon']\n",
       "number of names:  32033\n",
       "(list of chars, count):  ('.abcdefghijklmnopqrstuvwxyz', 27)\n",
       "(max word length, min word length):  (15, 1)\n"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "id": "ece9b2e4-7d31-4397-b570-f01f02c3e367",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "(torch.Size([228146, 3]), torch.Size([228146]), torch.int64, torch.int64)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "id": "40df7547-351a-400c-81a8-7b5d5da68526",
    "metadata": {},
    "outputs": [
@@ -118,15 +118,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...\n",
-      "..h\n",
-      ".hi\n",
-      "hir\n",
-      "iro\n"
+      "... => e\n",
+      "..e => l\n",
+      ".el => i\n",
+      "eli => e\n",
+      "lie => t\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((torch.Size([22829, 3]), torch.Size([22829])),\n",
+       " (torch.Size([182430, 3]), torch.Size([182430])),\n",
+       " (torch.Size([22887, 3]), torch.Size([22887])))"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# build_dset basically builds a rolling window on the dataset based on the context length.\n",
     "def build_dset(dset):\n",
     "    X, Y = [], []\n",
     "    for name in dset:\n",
@@ -141,68 +154,160 @@
     "    X = torch.tensor(X)\n",
     "    Y = torch.tensor(Y)\n",
     "    return X, Y\n",
-    "n1 = int(0.8*len(words))\n",
+    "n1 = int(0.1*len(words))\n",
     "n2 = int(0.9*len(words))\n",
     "\n",
-    "# why divide into 3\n",
     "X_train, Y_train = build_dset(names[:n1])\n",
     "X_val, Y_val = build_dset(names[n1:n2])\n",
     "X_test, Y_test = build_dset(names[n2:])\n",
     "\n",
-    "for c in X_test[:5]:\n",
-    "    print(''.join(itoa[i.item()] for i in c))"
+    "for c, d in zip(X_train[:5], Y_train[:5]):\n",
+    "    print(''.join(itoa[i.item()] for i in c), \"=>\", itoa[d.item()])\n",
+    "\n",
+    "(X_train.shape, Y_train.shape), (X_val.shape, Y_val.shape), (X_test.shape, Y_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "id": "36a4d92f-067a-4a56-a452-63c8171c6df8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([[-0.8215, -1.1966],\n",
-       "         [-1.5505,  0.4482],\n",
-       "         [ 0.9973, -0.1245],\n",
-       "         [ 0.9018, -1.4886],\n",
-       "         [-0.4428, -1.3698],\n",
-       "         [-0.7693, -0.8891],\n",
-       "         [-0.2978, -1.6962],\n",
-       "         [ 0.5888,  0.3978],\n",
-       "         [-0.2772, -0.3017],\n",
-       "         [-0.5132, -1.1129],\n",
-       "         [-0.2736, -0.6277],\n",
-       "         [-1.0195,  1.0809],\n",
-       "         [ 0.5346, -0.8812],\n",
-       "         [-1.8841,  0.6568],\n",
-       "         [-0.7425,  0.3652],\n",
-       "         [ 0.2991,  1.4693],\n",
-       "         [ 1.2173, -1.0886],\n",
-       "         [ 0.0550, -0.8916],\n",
-       "         [-1.5732,  0.7924],\n",
-       "         [-0.8945,  0.3442],\n",
-       "         [ 0.2235,  1.6182],\n",
-       "         [-1.7671,  0.2599],\n",
-       "         [ 1.3681,  0.0323],\n",
-       "         [-1.0477,  1.4662],\n",
-       "         [ 0.6799, -0.7930],\n",
-       "         [-1.3376, -0.8441],\n",
-       "         [-0.5871, -0.3898]]),\n",
-       " tensor([[-0.8215, -1.1966],\n",
-       "         [-0.8215, -1.1966],\n",
-       "         [-0.8215, -1.1966]]))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[89], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m g \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mGenerator()\u001b[38;5;241m.\u001b[39mmanual_seed(\u001b[38;5;241m2147483647\u001b[39m) \u001b[38;5;66;03m# for reproducibility\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# squeezing it into a 2 dimensional space \u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# since in the paper, a relatively smaller tensor(30 and 60) (to the dataset[17_000]) is used. \u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m C \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m27\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgenerator\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m x_enc \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mone_hot(X_train, num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m27\u001b[39m)\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[1;32m      8\u001b[0m Z \u001b[38;5;241m=\u001b[39m x_enc \u001b[38;5;241m@\u001b[39m C\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
     }
    ],
    "source": [
-    "C = torch.randn((27, 2))\n",
-    "emb = C[X_train[0]]\n",
-    "C, emb"
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
+    "\n",
+    "# squeezing it into a 2 dimensional space \n",
+    "# since in the paper, a relatively smaller tensor(30 and 60) (to the dataset[17_000]) is used. \n",
+    "C = torch.randn((27, 2), generator=g)\n",
+    "\n",
+    "x_enc = F.one_hot(X_train, num_classes=27).float()\n",
+    "Z = x_enc @ C\n",
+    "\n",
+    "# this is another way of doing x \\times W \n",
+    "emb = C[X_train]\n",
+    "\n",
+    "assert torch.equal(Z, emb)\n",
+    "print(\"The shape of Z(emb): \", Z.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "72b8b03a-4fac-4fe3-914c-91efd25d8eae",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (468710001.py, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[94], line 19\u001b[0;36m\u001b[0m\n\u001b[0;31m    b2 = torch.randn=(27, generator=g)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# changing shape of Z(emb) so as to cross weight \n",
+    "A = torch.cat(torch.unbind(Z, 1), dim=1)\n",
+    "A.shape\n",
+    "\n",
+    "# This is a more efficient implementation of the above\n",
+    "Z_shaped = Z.view(-1, 6)\n",
+    "\n",
+    "assert torch.equal(A, Z_shaped)\n",
+    "\n",
+    "# here let's use a 100 dimensional space\n",
+    "W1 = torch.randn((6, 100), generator=g)\n",
+    "b1 = torch.randn(27, generator=g)\n",
+    " \n",
+    "h = torch.tanh(Z_shaped @ W1 + b1) #hidden layer\n",
+    "\n",
+    "print(\"Shape of hidden layer: \", h.shape)\n",
+    "\n",
+    "W2 = torch.randn((100, 27), generator=g)\n",
+    "b2 = torch.randn=(27, generator=g)\n",
+    "\n",
+    "logits = h @ W2 + b2 # log-counts\n",
+    "print(\"Shape of logits: \", logits.shape)\n",
+    "\n",
+    "# normalization\n",
+    "counts = logits.exp()\n",
+    "probs = counts / counts.sum(1, keepdims=True)\n",
+    "\n",
+    "print(\"Shape of probability space: \", probs.shape)\n",
+    "\n",
+    "params = [C, W1, b1, W2, b2]\n",
+    "\n",
+    "print(\"Total number of parameters: \", sum(p.nelement() for p in params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "4b9aef35-5913-44bf-94a4-8044d21029f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'probs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[84], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# negative mean log likelihood (cross entropy loss)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[43mprobs\u001b[49m[torch\u001b[38;5;241m.\u001b[39marange(), Y_train]\u001b[38;5;241m.\u001b[39mlog()\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# another way\u001b[39;00m\n\u001b[1;32m      5\u001b[0m loss2 \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mcross_entropy(logits, Y_train)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'probs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# negative mean log likelihood (cross entropy loss)\n",
+    "loss = -probs[torch.arange(), Y_train].log().mean()\n",
+    "\n",
+    "# this is a better way to implement the above\n",
+    "loss2 = F.cross_entropy(logits, Y_train)\n",
+    "\n",
+    "assert torch.equal(loss, loss2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f16087e-6737-408b-ad7a-5f6e0b7a990a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in params:\n",
+    "    p.requires_grad = True # autograd should record operations\n",
+    "\n",
+    "# BACKPROPAGATION\n",
+    "\n",
+    "\n",
+    "# minibatch construct\n",
+    "# forward pass\n",
+    "# backward pass\n",
+    "# update\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8df6ead9-450f-4543-8043-37cc00c232ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sampling from model\n",
+    "g = torch.Generator().manual_seed(2147483647)"
    ]
   }
  ],
@@ -211,6 +316,25 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
